WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 111829
[EFL][Qt] REGRESSION(
r144787
): A fixed element lags when scrolling and wheeling.
https://bugs.webkit.org/show_bug.cgi?id=111829
Summary
[EFL][Qt] REGRESSION(r144787): A fixed element lags when scrolling and wheeling.
Dongseong Hwang
Reported
2013-03-08 00:34:05 PST
This is a regression that was born recently. It is easy to reproduce using ManualTests/fixed-position.html
Attachments
Patch
(14.85 KB, patch)
2013-03-08 02:05 PST
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Patch
(5.68 KB, patch)
2013-03-08 02:43 PST
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2013-03-08 02:05:27 PST
Created
attachment 192180
[details]
Patch
Dongseong Hwang
Comment 2
2013-03-08 02:43:43 PST
Created
attachment 192188
[details]
Patch
Dongseong Hwang
Comment 3
2013-03-08 02:45:04 PST
noamr's suggestion in IRC makes this patch more succinct.
WebKit Review Bot
Comment 4
2013-03-08 03:27:53 PST
Comment on
attachment 192188
[details]
Patch Clearing flags on attachment: 192188 Committed
r145207
: <
http://trac.webkit.org/changeset/145207
>
WebKit Review Bot
Comment 5
2013-03-08 03:27:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug